# REAL-TIME-AGE-AND-GENDER-DETECTION

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  load_test.py  test_analyze.py  test_expression_robustness.py  test_health.py  test_model_quality.py  test_multi_face.py  test_validation.py
frontend/: .env.example  .eslintrc.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: Camera.tsx
frontend/src/components/__tests__/: Camera.test.tsx
frontend/src/components/camera/: Controls.tsx  DebugPanel.tsx  DropZone.tsx  ResultsPanel.tsx
frontend/src/hooks/: useAnalyze.ts  useCamera.ts  useFileUpload.ts  useTemporalSmoothing.ts
frontend/src/lib/: api.ts  canvas.ts  constants.ts  types.ts
frontend/src/lib/__tests__/: api.test.ts
reports/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  FRONTEND_ARCHITECTURE.md  INFERENCE_PIPELINE.md  MODELS.md  PERFORMANCE_REPORT.md  PROJECT_OVERVIEW.md  TESTING_STRATEGY.md
