[project]
name = "age-gender-detection-backend"
version = "1.0.0"
description = "FastAPI backend for real-time age and gender detection"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
strict = false
python_version = "3.12"
